# Microscopy-SuperResolution

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base_train.yaml  fewshot_finetune.yaml  sample_uncertainty.yaml
scripts/: count_dataset.py  download_data_hf.py  evaluate.py  finetune_fewshot.py  make_conclusion_tradeoff_figure.py  run_ablations.py  sample_uncertainty.py  train_base.py  upload_data_hf.py  visualize_uncertainty.py
src/microscopy_sr/: __init__.py  eval.py  train.py
src/microscopy_sr/data/: __init__.py  dataset.py
src/microscopy_sr/diffusion/: __init__.py  ddpm.py
src/microscopy_sr/models/: __init__.py  lora.py  unet.py
